@@ -6,8 +6,8 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class TaskService {
@@ -19,25 +19,50 @@ public class TaskService {
         return taskRepository.findAll();
     }
 
-    public List<Task> getTasksByFilter(String tag, String priority, String status, String search) {
+    public List<Task> getTasksByFilter(String tag, String priority, String status, String search, String listName) {
         List<Task> tasks = taskRepository.findAll();
         
         if (tag != null && !tag.isEmpty()) {
-            tasks = tasks.stream().filter(t -> tag.equals(t.getTag())).toList();
+            tasks = tasks.stream().filter(t -> tag.equals(t.getTag())).collect(Collectors.toList());
         }
         if (priority != null && !priority.isEmpty()) {
-            tasks = tasks.stream().filter(t -> priority.equals(t.getPriority())).toList();
+            tasks = tasks.stream().filter(t -> priority.equals(t.getPriority())).collect(Collectors.toList());
+        }
+        if (listName != null && !listName.isEmpty()) {
+            tasks = tasks.stream().filter(t -> listName.equals(t.getListName())).collect(Collectors.toList());
         }
         if (status != null) {
             if ("completed".equals(status)) {
-                tasks = tasks.stream().filter(t -> t.getCompleted()).toList();
+                tasks = tasks.stream().filter(Task::getCompleted).collect(Collectors.toList());
             } else if ("pending".equals(status)) {
-                tasks = tasks.stream().filter(t -> !t.getCompleted()).toList();
+                tasks = tasks.stream().filter(t -> !t.getCompleted()).collect(Collectors.toList());
+            } else if ("overdue".equals(status)) {
+                String today = LocalDateTime.now().toLocalDate().toString();
+                tasks = tasks.stream().filter(t -> !t.getCompleted() && t.getDueDate() != null && t.getDueDate().compareTo(today) < 0).collect(Collectors.toList());
             }
         }
         if (search != null && !search.isEmpty()) {
-            tasks = tasks.stream().filter(t -> t.getText().contains(search)).toList();
+            String s = search.toLowerCase();
+            tasks = tasks.stream().filter(t -> 
+                (t.getText() != null && t.getText().toLowerCase().contains(s)) ||
+                (t.getNotes() != null && t.getNotes().toLowerCase().contains(s)) ||
+                (t.getDescription() != null && t.getDescription().toLowerCase().contains(s))
+            ).collect(Collectors.toList());
         }
+        
+        // Sort by orderIndex, then by priority
+        Collections.sort(tasks, new Comparator<Task>() {
+            @Override
+            public int compare(Task t1, Task t2) {
+                int cmp = Integer.compare(t1.getOrderIndex(), t2.getOrderIndex());
+                if (cmp != 0) return cmp;
+                String p1 = t1.getPriority();
+                String p2 = t2.getPriority();
+                int v1 = "high".equals(p1) ? 1 : "medium".equals(p1) ? 2 : "low".equals(p1) ? 3 : 4;
+                int v2 = "high".equals(p2) ? 1 : "medium".equals(p2) ? 2 : "low".equals(p2) ? 3 : 4;
+                return v1 - v2;
+            }
+        });
         
         return tasks;
     }
@@ -53,14 +78,7 @@ public class TaskService {
         if (task.getRepeat() != null && !task.getRepeat().isEmpty() && task.getDueDate() != null) {
             String nextDate = getNextDate(task.getDueDate(), task.getRepeat());
             if (nextDate != null) {
-                Task nextTask = new Task();
-                nextTask.setText(task.getText());
-                nextTask.setTag(task.getTag());
-                nextTask.setPriority(task.getPriority());
-                nextTask.setDueDate(nextDate);
-                nextTask.setRepeat(task.getRepeat());
-                nextTask.setReminder(task.getReminder());
-                nextTask.setCompleted(false);
+                Task nextTask = cloneTaskForRepeat(task, nextDate);
                 taskRepository.save(nextTask);
             }
         }
@@ -79,6 +97,12 @@ public class TaskService {
         task.setRepeat(taskDetails.getRepeat());
         task.setReminder(taskDetails.getReminder());
         task.setNotes(taskDetails.getNotes());
+        task.setDescription(taskDetails.getDescription());
+        task.setListName(taskDetails.getListName());
+        task.setOrderIndex(taskDetails.getOrderIndex());
+        task.setColor(taskDetails.getColor());
+        task.setLocation(taskDetails.getLocation());
+        task.setUrl(taskDetails.getUrl());
         task.setUpdatedAt(LocalDateTime.now());
         
         return taskRepository.save(task);
@@ -97,14 +121,7 @@ public class TaskService {
         if (task.getCompleted() && task.getRepeat() != null && !task.getRepeat().isEmpty() && task.getDueDate() != null) {
             String nextDate = getNextDate(task.getDueDate(), task.getRepeat());
             if (nextDate != null) {
-                Task nextTask = new Task();
-                nextTask.setText(task.getText());
-                nextTask.setTag(task.getTag());
-                nextTask.setPriority(task.getPriority());
-                nextTask.setDueDate(nextDate);
-                nextTask.setRepeat(task.getRepeat());
-                nextTask.setReminder(task.getReminder());
-                nextTask.setCompleted(false);
+                Task nextTask = cloneTaskForRepeat(task, nextDate);
                 taskRepository.save(nextTask);
             }
         }
@@ -125,21 +142,75 @@ public class TaskService {
         long completed = allTasks.stream().filter(Task::getCompleted).count();
         long pending = allTasks.size() - completed;
         
-        String today = java.time.LocalDate.now().toString();
+        String today = LocalDateTime.now().toLocalDate().toString();
         long overdue = allTasks.stream()
             .filter(t -> !t.getCompleted() && t.getDueDate() != null && t.getDueDate().compareTo(today) < 0)
             .count();
         long dueToday = allTasks.stream()
             .filter(t -> !t.getCompleted() && today.equals(t.getDueDate()))
             .count();
-            
+        
+        // Count by list
+        Map<String, Long> listCounts = allTasks.stream()
+            .collect(Collectors.groupingBy(t -> t.getListName() != null ? t.getListName() : "默认", Collectors.counting()));
+        
+        // Count by tag
+        Map<String, Long> tagCounts = allTasks.stream()
+            .filter(t -> t.getTag() != null && !t.getTag().isEmpty())
+            .collect(Collectors.groupingBy(Task::getTag, Collectors.counting()));
+        
         return Map.of(
             "total", (long) allTasks.size(),
             "completed", completed,
             "pending", pending,
             "overdue", overdue,
-            "dueToday", dueToday
+            "dueToday", dueToday,
+            "listCounts", listCounts,
+            "tagCounts", tagCounts
         );
+    }
+    
+    public List<String> getLists() {
+        List<Task> allTasks = taskRepository.findAll();
+        Set<String> lists = new HashSet<>();
+        lists.add("默认");
+        for (Task t : allTasks) {
+            if (t.getListName() != null && !t.getListName().isEmpty()) {
+                lists.add(t.getListName());
+            }
+        }
+        return new ArrayList<>(lists);
+    }
+    
+    public List<Task> reorderTasks(List<Long> ids) {
+        List<Task> tasks = new ArrayList<>();
+        for (int i = 0; i < ids.size(); i++) {
+            Optional<Task> opt = taskRepository.findById(ids.get(i));
+            if (opt.isPresent()) {
+                Task task = opt.get();
+                task.setOrderIndex(i);
+                task.setUpdatedAt(LocalDateTime.now());
+                tasks.add(taskRepository.save(task));
+            }
+        }
+        return tasks;
+    }
+
+    private Task cloneTaskForRepeat(Task original, String nextDate) {
+        Task next = new Task();
+        next.setText(original.getText());
+        next.setTag(original.getTag());
+        next.setPriority(original.getPriority());
+        next.setDueDate(nextDate);
+        next.setRepeat(original.getRepeat());
+        next.setReminder(original.getReminder());
+        next.setListName(original.getListName());
+        next.setDescription(original.getDescription());
+        next.setColor(original.getColor());
+        next.setCompleted(false);
+        next.setCreatedAt(LocalDateTime.now());
+        next.setUpdatedAt(LocalDateTime.now());
+        return next;
     }
 
     private String getNextDate(String currentDate, String repeat) {
